[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Andre Heber <andre.heber@gmx.net>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.34"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.16"
lettre = "0.11"

[dev-dependencies]
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
wiremock = "0.6"
serde_json = "1"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = ["postgres"] }
linkify = "0.10.0"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
